--- a/python/ui/main_app_ui.ui
+++ b/python/ui/main_app_ui.ui
@@ -48,7 +48,7 @@
    <property name="geometry">
     <rect>
      <x>150</x>
-     <y>260</y>
+     <y>230</y>
      <width>91</width>
      <height>23</height>
     </rect>
@@ -186,6 +186,19 @@
    </property>
    <property name="text">
     <string/>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pushButton_2">
+   <property name="geometry">
+    <rect>
+     <x>110</x>
+     <y>260</y>
+     <width>171</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Generate Chart (Mock Data)</string>
    </property>
   </widget>
  </widget>
